--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "authors": [
         {
             "name": "asaugrain",
-            "email": "asaugrain@digitalvirgo.com"
+            "email": "anthony.saugrain@gmail.com"
         }
     ],
     "require": {}
