--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "Apache License 2.0",
     "authors": [
         {
-            "name": "asaugrain",
+            "name": "atogeek",
             "email": "anthony.saugrain@gmail.com"
         }
     ],
